# ragfs

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  codecov.yml  deny.toml  release-plz.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  pr-title.yml  pre-release.yml  python-release.yml  release-plz.yml  release.yml  security.yml
crates/ragfs/: CHANGELOG.md  Cargo.toml
crates/ragfs-chunker/: Cargo.toml
crates/ragfs-chunker/src/: code.rs  fixed.rs  lib.rs  registry.rs  semantic.rs
crates/ragfs-core/: CHANGELOG.md  Cargo.toml
crates/ragfs-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/ragfs-embed/: CHANGELOG.md  Cargo.toml
crates/ragfs-embed/src/: cache.rs  candle.rs  lib.rs  noop.rs  pool.rs
crates/ragfs-extract/: CHANGELOG.md  Cargo.toml
crates/ragfs-extract/src/: image.rs  lib.rs  pdf.rs  registry.rs  text.rs  vision.rs
crates/ragfs-fuse/: Cargo.toml
crates/ragfs-fuse/src/: filesystem.rs  inode.rs  lib.rs  ops.rs  safety.rs  semantic.rs
crates/ragfs-index/: Cargo.toml
crates/ragfs-index/src/: indexer.rs  lib.rs  watcher.rs
crates/ragfs-mcp/: README.md  pyproject.toml
crates/ragfs-mcp/src/ragfs_mcp/: __init__.py  __main__.py  server.py
crates/ragfs-mcp/tests/: conftest.py  test_server.py
crates/ragfs-python/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/ragfs-python/examples/: .env.example  haystack_rag_pipeline.py  langchain_rag_chain.py  llamaindex_rag_pipeline.py
crates/ragfs-python/python/ragfs/: __init__.py
crates/ragfs-python/python/ragfs/haystack/: __init__.py  document_converter.py  document_splitter.py  document_store.py  document_writer.py  embedders.py  organizer.py  retriever.py  safe_document_store.py
crates/ragfs-python/python/ragfs/langchain/: __init__.py  document_loader.py  embeddings.py  retriever.py  text_splitter.py  vectorstore.py
crates/ragfs-python/python/ragfs/llamaindex/: __init__.py  embeddings.py  index.py  node_parser.py  organizer.py  reader.py  retriever.py  safe_vectorstore.py  vectorstore.py
crates/ragfs-python/src/: document_loader.rs  embeddings.rs  lib.rs  ops.rs  retriever.rs  safety.rs  semantic.rs  text_splitter.rs  vectorstore.rs
crates/ragfs-python/tests/: __init__.py  conftest.py  test_core.py
crates/ragfs-python/tests/test_haystack/: __init__.py  test_organizer.py
crates/ragfs-python/tests/test_llamaindex/: __init__.py  test_organizer.py
crates/ragfs-query/: Cargo.toml
crates/ragfs-query/src/: executor.rs  lib.rs  parser.rs
crates/ragfs-store/: Cargo.toml
crates/ragfs-store/src/: lancedb.rs  lib.rs  memory.rs  schema.rs
crates/ragfs/benches/: embedding.rs  indexing.rs  search.rs
crates/ragfs/examples/: basic_index.rs  basic_query.rs
crates/ragfs/src/: config.rs  main.rs
crates/ragfs/tests/: pipeline_test.rs
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING_STARTED.md  MCP.md  PERFORMANCE.md  PYTHON.md  TROUBLESHOOTING.md  USER_GUIDE.md  build_optimization.md  landing.html
examples/docker-rag-stack/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
examples/docker-rag-stack/rag-app/: Dockerfile  app.py  chainlit.md  components.py  file_manager.py  organizer.py  rag_chain.py  requirements.txt
examples/docker-rag-stack/ragfs-indexer/: Dockerfile  entrypoint.sh
examples/docker-rag-stack/sample-docs/: README.md
