[package]
name = "ragfs-chunker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Document chunking strategies for RAGFS"
keywords = ["chunking", "text-processing", "tree-sitter", "rag"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
ragfs-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tiktoken-rs.workspace = true
tree-sitter.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
