[package]
name = "ragfs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for RAGFS"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

[lints]
workspace = true
