[package]
name = "ragfs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for RAGFS"
keywords = ["rag", "embeddings", "vector-search", "semantic-search"]
categories = ["data-structures", "database-implementations"]

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

[lints]
workspace = true
