[package]
name = "ragfs-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local embedding generation for RAGFS using Candle"

[dependencies]
ragfs-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
directories.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
