[package]
name = "ragfs-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local embedding generation for RAGFS using Candle"
keywords = ["embeddings", "machine-learning", "candle", "rag"]
categories = ["science", "text-processing"]

[features]
default = ["candle"]
candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers",
]

[dependencies]
ragfs-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
directories.workspace = true
blake3.workspace = true

# Optional: Candle ML stack
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
