[package]
name = "ragfs-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Content extraction for RAGFS (text, PDF, images, code)"
keywords = ["extraction", "pdf", "text-processing", "rag"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
ragfs-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
pdf-extract.workspace = true
lopdf.workspace = true
flate2.workspace = true
image.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Vision captioning (optional)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

[features]
default = []
vision = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
