[package]
name = "ragfs-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FUSE filesystem implementation for RAGFS"
keywords = ["fuse", "filesystem", "rag", "semantic-search"]
categories = ["filesystem"]

[dependencies]
ragfs-core.workspace = true
ragfs-store.workspace = true
ragfs-query.workspace = true
ragfs-index.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
fuser.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
