[package]
name = "ragfs-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FUSE filesystem implementation for RAGFS"
keywords = ["fuse", "filesystem", "rag", "semantic-search"]
categories = ["filesystem"]

[features]
default = ["candle", "lancedb"]
candle = ["ragfs-index/candle", "ragfs-query/candle"]
lancedb = ["ragfs-index/lancedb", "ragfs-query/lancedb"]
vision = ["ragfs-index/vision"]

[dependencies]
ragfs-core.workspace = true
ragfs-store.workspace = true
ragfs-query.workspace = true
ragfs-index.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
fuser.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
libc = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
dirs = "5.0"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
