[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragfs-mcp"
version = "1.0.0"
description = "MCP server for RAGFS semantic search"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["mcp", "rag", "semantic-search", "claude", "ai"]
dependencies = [
    "mcp>=1.2.0",
    "ragfs>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
ragfs-mcp = "ragfs_mcp:run"

[project.entry-points."mcp.servers"]
ragfs = "ragfs_mcp:create_server"

[project.urls]
Homepage = "https://github.com/Venere-Labs/ragfs"
Documentation = "https://github.com/Venere-Labs/ragfs"
Repository = "https://github.com/Venere-Labs/ragfs"

[tool.hatch.build.targets.wheel]
packages = ["src/ragfs_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
