[package]
name = "ragfs-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vector storage layer for RAGFS using LanceDB"

[dependencies]
ragfs-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
lancedb.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
directories.workspace = true
blake3.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
