[package]
name = "ragfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RAGFS - A FUSE filesystem for RAG architectures"
keywords = ["rag", "fuse", "semantic-search", "embeddings", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "ragfs"
path = "src/main.rs"

[dependencies]
ragfs-core.workspace = true
ragfs-fuse.workspace = true
ragfs-index.workspace = true
ragfs-store.workspace = true
ragfs-query.workspace = true
ragfs-embed.workspace = true
ragfs-extract.workspace = true
ragfs-chunker.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
anyhow.workspace = true
thiserror.workspace = true
fuser.workspace = true
blake3.workspace = true
chrono.workspace = true
daemonize.workspace = true

[dev-dependencies]
tempfile.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
criterion.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "embedding"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "indexing"
harness = false

[lints]
workspace = true
